--- a/Nav Bar With Hover Effect/index.html
+++ b/Nav Bar With Hover Effect/index.html
@@ -13,6 +13,7 @@
         <a href="#">Services</a>
         <a href="#">Contact</a>
         <a href="#">More</a>
+        <span></span>
     </nav>    
 </body>
 </html>
