--- a/Nav Bar With Hover Effect/index.html
+++ b/Nav Bar With Hover Effect/index.html
@@ -12,7 +12,7 @@
         <a href="#">About</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
-        <a href="#">More</a>
+        <a href="#">Product</a>
         <span></span>
     </nav>    
 </body>
